<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Islamia Eye Hospital</string>
    <string name="aboutdev">
        Engineered By : INDRO NIl RAY\n
                        Md. Shamim Hossain\n
                        Md. Nazrul Islam \n\n
        Designed &amp; Planner By : Md. Wadud Bin Mozib ulla\n
                   Developed By : China Bangla IT Ltd.\n\n
                    Connect With US\n
        Chairman Phone : 01711734776,01919338862\n
                 Email : chinabanglaitltd@gmail.com\n
        CopyRight © China Bangla IT Ltd all Rights Reserved.
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_branch">Islamia Eye Hospital</string>
    <string name="title_activity_doctors">Islamia Eye Hospital</string>
    <string name="multilines">Medical/Nursing\nParamedical Service</string>
    <string name="multilines2">paediatric Ophthalmology\nStrabismus</string>
    <string name="title_activity_setting">Islamia Eye Hospital</string>
    <string name="settingdes">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500sLorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="faq">For Saturday to Wednesday,the hospital working hour is from 8.30am to 7.30pm, however registration counter remains open from 7.30am and closes at 6.30pm</string>
    <string name="faq2">For Thursday Working hour is from 8.30am to 1.30pm</string>
    <string name="faq3">Registration counter from 7.30am to 12.30pm</string>
    <string name="faq4">However Emergency and Inpateints service remains open for 24 hours every day.</string>
    <string name="faq5">
        <![CDATA[
            <html>
             <head></head>
             <body style="text-align:justify;font color='#424242'; size='4';">
               Hospital remains closed on Fridays and any holidays declared by Government.<br/><br/>Do emergency services remain open on holidays?
                Yes, emergency remains open   for every day of a year.<br/>What are the emergency services?
                Emergency service is for emergency only Common emergencies are any cut, burn, injury, impaction of foreign body I the eyes or adjoining area.<br/><br/>
                Sudden fullness with severe pain and redness, sudden onset of pain, \nsudden loss of vision are also emergencies.<br/>
                Routine check up, follow up, spectacles, chornic disease etc are not emergency.<br/><br/>

                <b>How can I make an appointment?</b></br><br/>

                You can dial at hotline xxxxxxxxxxxxxxxxxx from your mobile app by telephone or from Hospital website
                    You can also come directly to the reception, however getting appointment is subject to slot availability.<br/><br/>

                <b>How can make appointment for a particular doctor/consultant</b><br/><br/>
                While making an appointment, mention the name of consultant you seek for
                I have been referred from to particular department or doctor by a specialist doctor, what should I do<br/><br/>
                In the appointment process as above mention the doctor or speciality, \nthen while you are coming to the hospital bring the referral paper and submit them at the counter.<br/>
                You will directly taken to the concerned department or doctor without comprehensive check up<br/><br/>

                <b>What is the registration fee?</b><br/><br/>
                For general OPD it is taka 50 and for Private OPD it is Taka 800<br/><br/>

                <b>How many days it takes for cataract surgery</b><br/><br/>
                Maximum two days: the first day is for investigation, if investigations are oaky  thenYou can undergo surgery on the next day and go back to home on the same day<br/><br/>

                <b>What are the services available?</b><br/><br/>
                Please click the service menu<br/><br/>

                <b>Who are the consultants</b>
                Please click the ‘Our Consultants/Doctors’ Menu.<br/>
             </body>
            </html>
            ]]>
        </string>
    <string name="eyetips">
            <![CDATA[
            <html>
             <head></head>
             <body style="text-align:justify;font color='#424242'; size='4';">
              <b>5 Eye Care Tips for Beautiful Eyes</b><br/><br/>
                Most people don’t think about their eyes unless they’re putting on makeup. But, eyes need just as much care as skin does. These tips will help you to keep your eyes beautiful, healthy and looking sharp. Caring for your eyes like you do your skin and your face will ensure you look and feel your best.<br/><br/>
                <b>1) Cucumber Slices</b><br/><br/>
                The go-to eye care treatment has been, and conintues to be, cucumber slices. It’s worked for countless movie characters (including a few Bond girls) and comes pretty much standard at most spas.\n\n It is one of the oldest and most effective ways of eliminating those dark circles that creep like shadows on our faces. \n\n Not only do the cucumbers prevent dark circles but they also hydrate the skin to keep it looking fresh.\n\n Cucumbers are also one of the simplest eye care treatments.\n All you have to do is peel, \n slice and place fresh cucumbers on your eyes for fifteen to twenty minutes. In less than a half hour you’re looking and feeling ready to take on the day.<br/><br/>
                <b>2) Vitamin A and Vitamin C</b><br/><br/>
                Proper nutrition is one of the largest contributors to your overall health.\n Your body craves certain vitamins to perform at its best and to keep you looking yours.\n\nThe two types of Vitamins your eyes crave the most are Vitamin A and Vitamin C.\n\nAdd some carrots or squash to your daily routin to boost your Vitamin A levels and your skin’s natural glow. \n\nFor an extra dose of Vitamin C, stock up on citrus fruits or bell peppers and watch the look of your eyes improve right before your eyes. \n\nThe easiest way to keep your eyes looking great is to simply stick to a healthy diet and make sure you’re getting enough of the vitamins your body needs to be at its best.<br/><br/>
                <b>3) Water or Herbal Tea</b><br/><br/>
                Hydration is key. Not only does it help your body and skin but it also helps your eyes. \nYou don’t nessecarily have to stick to eight glasses of ice water a day though. You can always work in some herbal tea. \n\n Teas give you and your skin that extra boost to take care of business and those dark circles. By staying hydrated, your body will stay healthy, your will skin glow, and dark circles will disappear.<br/><br/>
                <b>4) Black/Green Tea Bags</b><br/><br/>
                Feeling a little puffy? There’s a suprising, home remedy for that. Like cucumber slices, cold tea bags can do wonders for your eyes.\n\n Instead of helping with dark circles though, placing cold tea bags on your eyes will elimnate puffiness and let you be your true self in the mirror and all day long.<br/><br/>
                <b>5) Rose Water</b><br/><br/>
                The skin around your eyes are just a part of how you keep you looking like you. When your eyes themselves are in need of a little touch up,\n don’t reach for an over the counter eye drop; restore their natural glow with rose water.\n Rose water has natural properties that can rejuviate your eyes quicker than you can bat an eyelash. One or two drops, at most, can cleanse your eyes and help them sparkle.<br/>

                <b>Don't take your eyes for granted. Take these easy steps to keep your peepers healthy.</b><br/><br/>

                <b>1. Eat Well</b><br/><br/>
Good eye health starts with the food on your plate. Nutrients like omega-3 fatty acids, lutein, zinc, and vitamins C and E might help ward off age-related vision problems like macular degeneration and cataracts. To get them, fill your plate with:<br/><br/>
•	Green leafy vegetables like spinach, kale, and collards<br/>
•	Salmon, tuna, and other oily fish<br/>
•	Eggs, nuts, beans, and other nonmeat protein sources<br/>
•	Oranges and other citrus fruits or juices<br/>
•	Oysters and pork<br/>
A well-balanced diet also helps you stay at a healthy weight. That lowers your odds of obesity and related diseases like type 2 diabetes, which is the leading cause of blindness in adults.<br/><br/>
                <b>2. Quit Smoking</b><br/><br/>
                It makes you more likely to get cataracts, damage to your optic nerve, and macular degeneration. If you've tried to kick the habit  before only to start again, keep at it. The more times you try to quit, the more likely you are to succeed. Ask your doctor for help.<br/><br/>
                <b>3. Wear Sunglasses</b><br/><br/>
                The right pair of shades will help protect your eyes from the sun's ultraviolet (UV) rays. Too much UV exposure boosts your chances of cataracts and macular degeneration.
                Choose a pair that blocks 99% to 100% of UVA and UVB rays. Wraparound lenses help protect your eyes from the side. Polarized lenses reduce glare while you drive.<br/>
             </body>
            </html>
            ]]>
</string>
    <string name="catera">
        <![CDATA[
            <html>
             <head></head>
             <body style="text-align:justify;font color='#424242'; size='4';">
              Cataract is a common eye condition, in which the lens becomes progressively opaque, resulting in blurred vision. This department diagnose cataract after proper clinical examination and investigations. <br/><br/> Then advise the patients for surgery. All types of cataract surgeries, including Phacoemulsification, SICS, SFL, complicated cataract surgery with iris hook or CTR, are performed in our institute by the following surgeons.
             </body>
            </html>
            ]]>
    </string>
    <string name="catera1">
        <![CDATA[
            <html>
             <head></head>
             <body style="text-align:justify;font color='#424242'; size='4';">
                The team in this service diagnose and treats cataract.<br/><br/>
                Cataract surgery is generally recommended when your cataract has progressed to the point that it is interfering with your daily activities and lifestyle.<br/><br/>
                Modern cataract surgery is usually quick and can be performed using a local anaesthetic only. Most people are able to return to work the day after their operation. <br/><br/>During surgery, your lens is usually replaced with a clear artificial lens, called an intraocular lens (IOL). \n\n For most patients, the new lens is chosen to aim for focused distant vision after the operation.<br/> Many people still require glasses for fine focusing in the distance and it is usual for you to need reading glasses after  your operation.<br/><br/>
                Now a days we are using multifocal IOLs for focussing both distance and near and toric IOLs for  correcting astigmatism.<br/>
                </body>
            </html>
            ]]>
    </string>
    <string name="catera2">
        <![CDATA[
            <html>
             <head></head>
             <body style="text-align:justify;font color='#424242'; size='4';">
                 Biometry<br/><br/>
                 GAT<br/><br/>
                 Sac patency test<br/>
              </body>
            </html>
            ]]>
    </string>
</resources>