<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:autofit="http://schemas.android.com/apk/android"
    tools:context="com.Heavenking.chinabanglait.islamiaeyehospital.AboutActivity"
    tools:ignore="NamespaceTypo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="TODO"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/ic_nav_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/allbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/appback"
                android:text=":: Hospital working hour  ::"
                android:textAllCaps="false" />
        </LinearLayout>

        <me.grantland.widget.AutofitTextView
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLines="3"
            android:paddingTop="6dp"
            android:text="@string/faq"
            style="@style/autofitstyle"
            autofit:minTextSize="14sp"
            tools:ignore="MissingConstraints" />

        <me.grantland.widget.AutofitTextView
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLines="1"
            android:paddingTop="6dp"
            android:text="@string/faq2"
            style="@style/autofitstyle"
            autofit:minTextSize="14sp"
            tools:ignore="MissingConstraints" />

        <me.grantland.widget.AutofitTextView
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLines="1"
            android:paddingTop="6dp"
            android:text="@string/faq3"
            style="@style/autofitstyle"
            autofit:minTextSize="14sp"
            tools:ignore="MissingConstraints" />

        <me.grantland.widget.AutofitTextView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLines="2"
            android:paddingTop="6dp"
            android:text="@string/faq4"
            style="@style/autofitstyle"
            autofit:minTextSize="14sp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                style="@style/allbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/appback"
                android:text=":: Holidays  ::"
                android:textAllCaps="false" />
        </LinearLayout>

        <WebView
            android:id="@+id/webView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/autofitstyle" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>




