<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:autofit="http://schemas.android.com/apk/android"
    tools:context="com.Heavenking.chinabanglait.islamiaeyehospital.AboutActivity"
    tools:ignore="NamespaceTypo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="TODO"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/ic_nav_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/appback"
                android:text=":: Cataract Department  ::"
                android:textAllCaps="false" />
        </LinearLayout>

        <me.grantland.widget.AutofitTextView
            android:layout_width="353dp"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLines="10"
            android:paddingTop="6dp"
            android:text="@string/catera"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            autofit:minTextSize="14sp"
            tools:ignore="MissingConstraints"
            tools:text="@string/catera" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/appback"
                android:text=":: Consultants ::"
                android:textAllCaps="false" />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp">

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="120dp"
                    android:layout_height="130dp"
                    app:srcCompat="@drawable/doc2" />

                <me.grantland.widget.AutofitTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:maxLines="1"
                    android:text="Dr. Shafi Khan"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    autofit:minTextSize="14sp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="120dp"
                    android:layout_height="130dp"
                    app:srcCompat="@drawable/do3" />

                <me.grantland.widget.AutofitTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:maxLines="1"
                    android:text="Dr. Abdus Salam"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    autofit:minTextSize="14sp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="120dp"
                    android:layout_height="130dp"
                    app:srcCompat="@drawable/do4" />

                <me.grantland.widget.AutofitTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:maxLines="1"
                    android:text="Dr. Ahamed Zaher"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    autofit:minTextSize="14sp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp">

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp">

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/appback"
                android:text=":: Services  ::"
                android:textAllCaps="false" />
        </LinearLayout>

        <me.grantland.widget.AutofitTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLines="30"
            android:paddingTop="6dp"
            android:text="@string/catera1"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            autofit:minTextSize="14sp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/appback"
                android:text=":: Facilities  ::"
                android:textAllCaps="false" />
        </LinearLayout>

        <me.grantland.widget.AutofitTextView
            android:layout_width="wrap_content"
            android:layout_height="135dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLines="10"
            android:paddingTop="6dp"
            android:text="@string/catera2"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            autofit:minTextSize="14sp"
            tools:ignore="MissingConstraints" />


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>



